--- a/templates/ajax/game/game.html.twig
+++ b/templates/ajax/game/game.html.twig
@@ -40,8 +40,25 @@
                 {% if not role.hidden %}
                     <li class="status{% if role.helpSection is not null %} link{% endif %}" {% if role.helpSection is not null %}x-ajax-href="{{ path('help', {'name': role.helpSection}) }}"{% endif %}>
                         <img src="{{ asset('build/images/roles/' ~ role.icon ~ '.gif') }}" alt="{{ role.label|trans({},'game') }}">
+                        {% if role.name == "ghoul" and hunger < 40 %}
+                            <img class="alt-hunger-bar hidden" src="{{ asset('build/images/icons/warning_anim.gif') }}" alt="/!\" />
+                        {% endif %}
                         <div class="tooltip item">
+                            <h1>{{ role.label|trans({}, 'game') }}</h1>
                             {{ (role.message ?? 'Du bist der {rolename} dieser Stadt.')|trans({'{rolename}': role.label|trans({}, 'game')}, 'game')}}
+                            {% if role.name == "ghoul" %}
+                                <div class="alt-hunger-bar hidden">
+                                    <div><b>{{ 'Hunger:'|trans({}, 'game') }}</b></div>
+                                    <div class="ghoul-hunger-container in-tooltip">
+                                        <div class="ghoul-hunger-background"></div>
+                                        <div class="ghoul-hunger-bar {% if hunger > 40 %}warning{% endif %}" style="width: {{ min(100,hunger) }}%"></div>
+                                        <div class="ghoul-hunger-indicator" style="left: 40%"></div>
+                                    </div>
+                                    {% if hunger < 40 %}
+                                        <div class="ghoul-message"><img src="{{ asset('build/images/icons/warning_anim.gif') }}" alt="/!\"> {{"Du wirst heute Nacht sterben!"|trans({}, 'game')}}</div>
+                                    {% endif %}
+                                </div>
+                            {%endif%}
                         </div>
                     </li>
                 {% endif %}
@@ -49,7 +66,7 @@
             {% if banished %}
                 <li class="status"><img src="{{ asset('build/images/icons/banished.gif') }}" alt="{{ 'Verbannt'|trans({},'game') }}">
                     <div class="tooltip normal">
-                        <b>{{ 'Verbannt'|trans({},'game') }}</b><br />
+                        <h1>{{ 'Verbannt'|trans({},'game') }}</h1>
                         {% trans from 'game' %}
                             Deine Stadt hat entschieden, dich zu verbannen. Einige Aktionen stehen dir nicht länger zur Verfügung.
                         {% endtrans %}
