--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1056,6 +1056,7 @@ div.game-menu-area {
             height: 32px !important;
             text-transform: uppercase;
             font-weight: bold;
+            z-index: 1;
             &.warning {
               height: 50px !important;
             }
