--- a/templates/ajax/game/game.html.twig
+++ b/templates/ajax/game/game.html.twig
@@ -40,7 +40,7 @@
                 {% if not role.hidden %}
                     <li class="status{% if role.helpSection is not null %} link{% endif %}" {% if role.helpSection is not null %}x-ajax-href="{{ path('help', {'name': role.helpSection}) }}"{% endif %}>
                         <img src="{{ asset('build/images/roles/' ~ role.icon ~ '.gif') }}" alt="{{ role.label|trans({},'game') }}">
-                        {% if role.name == "ghoul" and hunger < 40 %}
+                        {% if role.name == "ghoul" and hunger > 40 %}
                             <img class="alt-hunger-bar hidden" src="{{ asset('build/images/icons/warning_anim.gif') }}" alt="/!\" />
                         {% endif %}
                         <div class="tooltip item">
@@ -54,7 +54,7 @@
                                         <div class="ghoul-hunger-bar {% if hunger > 40 %}warning{% endif %}" style="width: {{ min(100,hunger) }}%"></div>
                                         <div class="ghoul-hunger-indicator" style="left: 40%"></div>
                                     </div>
-                                    {% if hunger < 40 %}
+                                    {% if hunger > 40 %}
                                         <div class="ghoul-message"><img src="{{ asset('build/images/icons/warning_anim.gif') }}" alt="/!\"> {{"Du wirst heute Nacht sterben!"|trans({}, 'game')}}</div>
                                     {% endif %}
                                 </div>
