--- a/templates/ajax/admin/towns/explorer.html.twig
+++ b/templates/ajax/admin/towns/explorer.html.twig
@@ -60,6 +60,7 @@
                         {{ _self.valuelist('Bürger'|trans({},'admin'),     town.citizens|length) }}
                         {{ _self.valuelist('Koalitionen'|trans({},'admin'),town.coalizedCitizenCount) }}
                         {{ _self.valuelist('Saison'|trans({},'admin'),     town.season ? town.season.number : '--') }}
+                        {{ _self.valuelist('Profiler'|trans({},'admin'),   town.rankingEntry.profilerVersion > 0 ? ('v'~town.rankingEntry.profilerVersion) : ('Nicht installiert'|trans({},'admin'))) }}
                         {{ _self.valuelist('Tag'|trans({},'admin'),        town.day) }}
                         {{ _self.valuelist('Offen'|trans({},'admin'),      town.open ? (town.password ? 'Passwort-geschützt'|trans({},'admin') : true) : false ) }}
                         {{ _self.valuelist('Chaos'|trans({},'admin'),      town.chaos) }}
