--- a/templates/ajax/public/login.html.twig
+++ b/templates/ajax/public/login.html.twig
@@ -118,9 +118,7 @@
             {% endif %}
 
         </div>
-        <div class="cell rw-12 fact" style="padding-left: 35px;">
-            {{ fact.content }} - <span class="author"> {{ fact.author }}</span>
-        </div>
+        {% include "ajax/public/fact.html.twig" with {fact: fact} %}
     </div>
 {% endblock %}
 
