--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -268,6 +268,40 @@ x-message {
         background: url('../img/background/footer_zombie.gif') 0 0 no-repeat; text-align: right; font-size: 1.2rem;
         text-shadow: 0 1px 1px black, 0 -1px 1px black, 1px 0 1px black, -1px 0 1px black, 1px 1px 1px black, -1px -1px 1px black, -1px 1px 1px black, 1px -1px 1px black;
         .author { font-weight: bold; color: #fdcb70; }
+        &.scrolling {overflow: hidden;white-space: nowrap;}
+        #scroll-text {
+          /* animation properties */
+          -moz-transform: translateX(100%);
+          -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+
+          -moz-animation: my-animation 15s linear infinite;
+          -webkit-animation: my-animation 15s linear infinite;
+          animation: my-animation 15s linear infinite;
+        }
+        /* for Firefox */
+        @-moz-keyframes my-animation {
+          from { -moz-transform: translateX(100%); }
+          to { -moz-transform: translateX(-100%); }
+        }
+        /* for Chrome */
+        @-webkit-keyframes my-animation {
+          from { -webkit-transform: translateX(100%); }
+          to { -webkit-transform: translateX(-100%); }
+        }
+
+        @keyframes my-animation {
+          from {
+            -moz-transform: translateX(100%);
+            -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+          }
+          to {
+            -moz-transform: translateX(-100%);
+            -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+          }
+        }
       }
     }
 
