--- a/templates/ajax/public/login_legacy.html.twig
+++ b/templates/ajax/public/login_legacy.html.twig
@@ -49,10 +49,8 @@
                 {% endif %}
             </p>
         </div>
-        <div class="cell rw-12 fact" style="padding-left: 35px;">
-            {{ fact.content }} - <span class="author"> {{ fact.author }}</span>
-        </div>
     </div>
+    {% include "ajax/public/fact.html.twig" with {fact: fact} %}
 {% endblock %}
 
 {% block js %}
