--- a/templates/ajax/game/town/citizen_omniscience.html.twig
+++ b/templates/ajax/game/town/citizen_omniscience.html.twig
@@ -10,10 +10,10 @@
 
     <div class="row-table citizens-list">
         <div class="row-flex header">
-            <div class="padded cell rw-4 left rw-md-5">{{ 'Bürger'|trans({},'game') }}</div>
-            <div class="padded cell rw-4 rw-md-2 center">{{ 'Truhe'|trans({},'game') }}</div>
-            <div class="padded cell rw-2 rw-md-1 center">{{ 'Seele'|trans({},'soul') }}</div>
-            <div class="padded cell rw-2 center">
+            <div class="padded cell hide-sm rw-4 left rw-md-5">{{ 'Bürger'|trans({},'game') }}</div>
+            <div class="padded cell hide-sm rw-4 rw-md-2 center">{{ 'Truhe'|trans({},'game') }}</div>
+            <div class="padded cell hide-sm rw-2 rw-md-1 center">{{ 'Seele'|trans({},'soul') }}</div>
+            <div class="padded cell hide-sm rw-2 center">
                 {{ 'Aktivität'|trans({},'game') }}<br />
                 {{ help_btn('Dieser Wert spiegelt die Anwesenheit und Aktivität eines jeden Bürgers wider.'|trans({},'game')) }}
             </div>
@@ -25,7 +25,7 @@
                 <div class="cell factor-0 content-center-vertical">
                         <img alt="{{ citizen.infos.home.prototype.level }}" src="{{ asset('build/images/home/' ~ citizen.infos.home.prototype.icon ~ '.gif') }}" />
                 </div>
-                <div class="cell rw-4 rw-md-3 small citizen-box {% if citizen.infos == me%} citizen-box-name-me {% else %} citizen-box-name {% endif %} content-center-vertical pl-05">
+                <div class="cell rw-4 rw-md-5 small citizen-box {% if citizen.infos == me%} citizen-box-name-me {% else %} citizen-box-name {% endif %} content-center-vertical pl-05">
                     <span>
                         {% if citizen.infos.banished %}
                             <div class="inline">
