--- a/templates/ajax/forum/editor.html.twig
+++ b/templates/ajax/forum/editor.html.twig
@@ -610,12 +610,21 @@
                 let s_start = node_transfer_source.selectionStart;
                 let s_end = node_transfer_source.selectionEnd;
 
+                let selection = content.substr( s_start, s_end - s_start );
+                
+                // Replace subsequent selected line returns to form a full list
+                selection = selection.replaceAll('\n',`\n[${tag}]`);   
+
+                let result = `\n[${tag}]${selection}`;
+
+
                 node_transfer_source.value =
                     content.substr( 0, s_start ) +
-                    '\n[' + tag + ']' +
-                    content.substr( s_start );
+                    result +
+                    content.substr( s_end );
 
-                node_transfer_source.setSelectionRange( s_start + tag.length + 3, s_end + tag.length + 3 );
+                // s_start + 1 -> ignore the added '\n' at the start
+                node_transfer_source.setSelectionRange( s_start + 1, s_start + result.length );
                 node_transfer_source.focus()
                 transfer_to_preview();
             } );
