--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -290,6 +290,8 @@
       .forum-preview-container { position: unset; top: 0; left: 0; right: 0; bottom: 0; }
     }
   }
+
+  .rucksack_status_union.status:before { background: url("../img/game-bar/cog2m.png") 0 0 no-repeat !important; }
 }
 
 .postfix(@threshold, @postfix) {
