--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1490,6 +1490,7 @@ div.tooltip {
 
   &.item {
     color: #dfdad2;
+    width: 250px;
     border: 1px solid #ab9d89;
     border-bottom-color: black;
     border-right-color: black;
